ingress-wear-watch-food-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch
  namespace: app-space
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: wear-service
              servicePort: 8080
            path: /wear
          - backend:
              serviceName: video-service
              servicePort: 8080
            path: /watch
          - backend:
              serviceName: food-service
              servicePort: 8080
            path: /eat
